--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <h2 class="logo">Pooja</h2>
   <nav>
     <a href="#home">Home</a>
+    <a href="#about">About</a>
     <a href="#skills">Skills</a>
     <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
@@ -21,8 +22,29 @@
 <!-- HERO -->
 <section id="home" class="hero">
   <h1>Hi, I am Pooja</h1>
-  <p>Frontend Developer Trainee</p>
+  <p>Full Stack Developer Trainee</p>
   <button id="hireBtn">Hire Me</button>
+</section>
+
+<!-- ABOUT -->
+<section id="about" class="about">
+  <h2>About Me</h2>
+
+  <p>
+    I am a Full Stack Developer trainee with skills in HTML, CSS, JavaScript,
+    Node.js, Express.js and MongoDB.
+  </p>
+
+  <p>
+    I have completed my internship from Infosys Springboard as a Full Stack
+    Developer with Angular.
+  </p>
+
+  <p>
+    I have completed my Diploma from Government Polytechnic, Khamgaon and
+    currently I am pursuing my Engineering from Siddhivinayak Technical Campus,
+    Shegaon.
+  </p>
 </section>
 
 <!-- SKILLS -->
@@ -33,7 +55,11 @@
     <div class="skill">HTML</div>
     <div class="skill">CSS</div>
     <div class="skill">JavaScript</div>
-    <div class="skill">Git & GitHub</div>
+    <div class="skill">Node.js</div>
+    <div class="skill">Express.js</div>
+    <div class="skill">MongoDB</div>
+    <div class="skill">GitHub</div>
+    <div class="skill">Angular</div>
   </div>
 </section>
 
@@ -43,16 +69,28 @@
 
   <div class="project-cards">
 
+    <!-- BidNow -->
     <div class="card">
-      <h3>Portfolio Website</h3>
-      <p>Responsive personal website</p>
-      <button class="viewBtn">View Details</button>
+      <h3>BidNow – Online Bidding System</h3>
+      <p>Real-time full stack auction platform</p>
+
+      <button class="viewBtn"
+        data-title="BidNow – Online Bidding System"
+        data-desc="BidNow is a full-stack real-time online bidding web application with Bidder, Auctioneer and Admin dashboards, developed using Angular, Node.js, Express.js and MongoDB.">
+        View Details
+      </button>
     </div>
 
+    <!-- Portfolio -->
     <div class="card">
-      <h3>Landing Page</h3>
-      <p>Simple marketing website</p>
-      <button class="viewBtn">View Details</button>
+      <h3>Portfolio Website</h3>
+      <p>Personal responsive portfolio website</p>
+
+      <button class="viewBtn"
+        data-title="Portfolio Website"
+        data-desc="Personal portfolio website developed using HTML, CSS and JavaScript with responsive design and interactive features.">
+        View Details
+      </button>
     </div>
 
   </div>
@@ -62,14 +100,17 @@
 <div class="modal" id="projectModal">
   <div class="modal-content">
     <span id="closeModal">&times;</span>
-    <h3>Project Details</h3>
-    <p>This project is created using HTML, CSS and JavaScript.</p>
+    <h3 id="modalTitle"></h3>
+    <p id="modalDesc"></p>
   </div>
 </div>
 
 <!-- CONTACT -->
 <section id="contact" class="contact-section">
   <h2>Contact Me</h2>
+
+  <p><strong>Phone:</strong> 9637113928</p>
+  <p><strong>Email:</strong> poojarinde@gmail.com</p>
 
   <form id="contactForm">
     <input type="text" id="name" placeholder="Your Name">
