Day 3 update - projects modal, skills UI and responsiveness

--- a/index.html
+++ b/index.html
@@ -2,124 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pooja Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <title>Pooja | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header class="navbar">
-  <h2 class="logo">Pooja</h2>
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#skills">Skills</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
-
-<!-- HERO -->
-<section id="home" class="hero">
-  <h1>Hi, I am Pooja</h1>
-  <p>Full Stack Developer Trainee</p>
-  <button id="hireBtn">Hire Me</button>
-</section>
-
-<!-- ABOUT -->
-<section id="about" class="about">
-  <h2>About Me</h2>
-
-  <p>
-    I am a Full Stack Developer trainee with skills in HTML, CSS, JavaScript,
-    Node.js, Express.js and MongoDB.
-  </p>
-
-  <p>
-    I have completed my internship from Infosys Springboard as a Full Stack
-    Developer with Angular.
-  </p>
-
-  <p>
-    I have completed my Diploma from Government Polytechnic, Khamgaon and
-    currently I am pursuing my Engineering from Siddhivinayak Technical Campus,
-    Shegaon.
-  </p>
-</section>
-
-<!-- SKILLS -->
-<section id="skills" class="skills">
-  <h2>My Skills</h2>
-
-  <div class="skill-box">
-    <div class="skill">HTML</div>
-    <div class="skill">CSS</div>
-    <div class="skill">JavaScript</div>
-    <div class="skill">Node.js</div>
-    <div class="skill">Express.js</div>
-    <div class="skill">MongoDB</div>
-    <div class="skill">GitHub</div>
-    <div class="skill">Angular</div>
-  </div>
-</section>
-
-<!-- PROJECTS -->
-<section id="projects" class="projects">
+<section class="projects" id="projects">
   <h2>My Projects</h2>
 
-  <div class="project-cards">
+  <div class="project-grid">
 
-    <!-- BidNow -->
-    <div class="card">
-      <h3>BidNow – Online Bidding System</h3>
-      <p>Real-time full stack auction platform</p>
-
-      <button class="viewBtn"
-        data-title="BidNow – Online Bidding System"
-        data-desc="BidNow is a full-stack real-time online bidding web application with Bidder, Auctioneer and Admin dashboards, developed using Angular, Node.js, Express.js and MongoDB.">
-        View Details
-      </button>
+    <!-- Project 1 -->
+    <div class="project-card" data-modal="modal1">
+      <h3>BidNow – Real Time Bidding System</h3>
+      <p>Full Stack Web Application</p>
+      <button class="view-btn">View Details</button>
     </div>
 
-    <!-- Portfolio -->
-    <div class="card">
+    <!-- Project 2 -->
+    <div class="project-card" data-modal="modal2">
       <h3>Portfolio Website</h3>
-      <p>Personal responsive portfolio website</p>
-
-      <button class="viewBtn"
-        data-title="Portfolio Website"
-        data-desc="Personal portfolio website developed using HTML, CSS and JavaScript with responsive design and interactive features.">
-        View Details
-      </button>
+      <p>Personal Responsive Website</p>
+      <button class="view-btn">View Details</button>
     </div>
 
   </div>
 </section>
 
-<!-- MODAL -->
-<div class="modal" id="projectModal">
+
+<!-- Modal 1 -->
+<div class="modal" id="modal1">
   <div class="modal-content">
-    <span id="closeModal">&times;</span>
-    <h3 id="modalTitle"></h3>
-    <p id="modalDesc"></p>
+    <span class="close">&times;</span>
+    <h3>BidNow – Real Time Bidding System</h3>
+    <p>
+      BidNow is a full-stack real-time bidding platform with
+      Admin, Auctioneer and Bidder dashboards.
+      It supports live auctions and secure user management.
+    </p>
+    <p><b>Tech:</b> HTML, CSS, JavaScript, Node.js, Express, MongoDB</p>
   </div>
 </div>
 
-<!-- CONTACT -->
-<section id="contact" class="contact-section">
-  <h2>Contact Me</h2>
+<!-- Modal 2 -->
+<div class="modal" id="modal2">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h3>Personal Portfolio Website</h3>
+    <p>
+      A responsive personal portfolio website to showcase
+      skills, projects and contact details.
+    </p>
+    <p><b>Tech:</b> HTML, CSS, JavaScript</p>
+  </div>
+</div>
 
-  <p><strong>Phone:</strong> 9637113928</p>
-  <p><strong>Email:</strong> poojarinde@gmail.com</p>
 
-  <form id="contactForm">
-    <input type="text" id="name" placeholder="Your Name">
-    <input type="email" id="email" placeholder="Your Email">
-    <textarea id="message" placeholder="Your Message"></textarea>
-    <button type="submit">Send</button>
-  </form>
+<!-- Skills Section -->
+<section class="skills" id="skills">
+  <h2>My Skills</h2>
+
+  <div class="skills-grid">
+    <div class="skill-box">HTML</div>
+    <div class="skill-box">CSS</div>
+    <div class="skill-box">JavaScript</div>
+    <div class="skill-box">Node.js</div>
+    <div class="skill-box">Express.js</div>
+    <div class="skill-box">MongoDB</div>
+    <div class="skill-box">GitHub</div>
+    <div class="skill-box">Angular</div>
+  </div>
 </section>
 
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
