Day 3 update index.html

--- a/index.html
+++ b/index.html
@@ -7,58 +7,38 @@
 </head>
 <body>
 
-<section class="projects" id="projects">
-  <h2>My Projects</h2>
+<!-- NAVBAR -->
+<header>
+  <nav class="navbar">
+    <h2 class="logo">Pooja</h2>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <div class="project-grid">
-
-    <!-- Project 1 -->
-    <div class="project-card" data-modal="modal1">
-      <h3>BidNow – Real Time Bidding System</h3>
-      <p>Full Stack Web Application</p>
-      <button class="view-btn">View Details</button>
-    </div>
-
-    <!-- Project 2 -->
-    <div class="project-card" data-modal="modal2">
-      <h3>Portfolio Website</h3>
-      <p>Personal Responsive Website</p>
-      <button class="view-btn">View Details</button>
-    </div>
-
-  </div>
+<!-- HERO -->
+<section class="hero" id="home">
+  <h1>Hi, I'm Pooja Rinde</h1>
+  <p>Full Stack Developer</p>
 </section>
 
+<!-- ABOUT -->
+<section class="about" id="about">
+  <h2>About Me</h2>
+  <p>
+    I have completed my internship from Infosys Springboard in Full Stack
+    Development (Angular). I have completed my Diploma from Government
+    Polytechnic Khamgaon and currently pursuing Engineering from
+    Siddhivinayak Technical Campus, Shegaon.
+  </p>
+</section>
 
-<!-- Modal 1 -->
-<div class="modal" id="modal1">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <h3>BidNow – Real Time Bidding System</h3>
-    <p>
-      BidNow is a full-stack real-time bidding platform with
-      Admin, Auctioneer and Bidder dashboards.
-      It supports live auctions and secure user management.
-    </p>
-    <p><b>Tech:</b> HTML, CSS, JavaScript, Node.js, Express, MongoDB</p>
-  </div>
-</div>
-
-<!-- Modal 2 -->
-<div class="modal" id="modal2">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <h3>Personal Portfolio Website</h3>
-    <p>
-      A responsive personal portfolio website to showcase
-      skills, projects and contact details.
-    </p>
-    <p><b>Tech:</b> HTML, CSS, JavaScript</p>
-  </div>
-</div>
-
-
-<!-- Skills Section -->
+<!-- SKILLS -->
 <section class="skills" id="skills">
   <h2>My Skills</h2>
 
@@ -74,6 +54,61 @@
   </div>
 </section>
 
+<!-- PROJECTS -->
+<section class="projects" id="projects">
+  <h2>My Projects</h2>
+
+  <div class="project-grid">
+
+    <div class="project-card" data-modal="modal1">
+      <h3>BidNow – Real Time Bidding System</h3>
+      <p>Full Stack Web Application</p>
+      <button class="view-btn">View Details</button>
+    </div>
+
+    <div class="project-card" data-modal="modal2">
+      <h3>Personal Portfolio Website</h3>
+      <p>Responsive Website</p>
+      <button class="view-btn">View Details</button>
+    </div>
+
+  </div>
+</section>
+
+
+<!-- MODAL 1 -->
+<div class="modal" id="modal1">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h3>BidNow – Real Time Bidding System</h3>
+    <p>
+      Real-time bidding platform with Admin, Auctioneer and Bidder dashboards.
+    </p>
+    <p><b>Tech:</b> HTML, CSS, JavaScript, Node.js, Express.js, MongoDB</p>
+  </div>
+</div>
+
+<!-- MODAL 2 -->
+<div class="modal" id="modal2">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h3>Personal Portfolio Website</h3>
+    <p>
+      Portfolio website to showcase skills, projects and contact details.
+    </p>
+    <p><b>Tech:</b> HTML, CSS, JavaScript</p>
+  </div>
+</div>
+
+
+<!-- CONTACT -->
+<section class="contact" id="contact">
+  <h2>Contact</h2>
+  <p>Phone: 9637113928</p>
+  <p>Email: poojarinde@gmail.com</p>
+</section>
+
 <script src="script.js"></script>
 </body>
 </html>
+
