--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <p>Email: poojarinde@gmail.com</p>
 </section>
 
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
 
