--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Pooja | Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -107,6 +107,7 @@
   <p>Phone: 9637113928</p>
   <p>Email: poojarinde@gmail.com</p>
 </section>
+
 <script src="js/script.js"></script>
 </body>
 </html>
