--- a/index.html
+++ b/index.html
@@ -2,45 +2,56 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pooja | Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Pooja Rinde | Portfolio</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- NAVBAR -->
 <header>
   <nav class="navbar">
-    <h2 class="logo">Pooja</h2>
+    <div class="logo">Pooja</div>
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#skills">Skills</a></li>
       <li><a href="#projects">Projects</a></li>
+      <li><a href="#achievements">Achievements</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 </header>
 
+
 <!-- HERO -->
 <section class="hero" id="home">
-  <h1>Hi, I'm Pooja Rinde</h1>
-  <p>Full Stack Developer</p>
+  <div class="hero-content">
+    <h1>Hi, I'm Pooja Rinde</h1>
+    <p>Full Stack Developer</p>
+    <a href="#projects" class="hero-btn">View My Work</a>
+  </div>
 </section>
+
 
 <!-- ABOUT -->
 <section class="about" id="about">
-  <h2>About Me</h2>
+  <h2 class="section-title">About Me</h2>
+
   <p>
     I have completed my internship from Infosys Springboard in Full Stack
-    Development (Angular). I have completed my Diploma from Government
-    Polytechnic Khamgaon and currently pursuing Engineering from
-    Siddhivinayak Technical Campus, Shegaon.
+    Developer (Angular). I have completed my Diploma from Government Polytechnic,
+    Khamgaon and currently pursuing my Engineering from Siddhivinayak Technical
+    Campus, Shegaon.
   </p>
 </section>
 
+
 <!-- SKILLS -->
 <section class="skills" id="skills">
-  <h2>My Skills</h2>
+  <h2 class="section-title">My Skills</h2>
 
   <div class="skills-grid">
     <div class="skill-box">HTML</div>
@@ -54,9 +65,10 @@
   </div>
 </section>
 
+
 <!-- PROJECTS -->
 <section class="projects" id="projects">
-  <h2>My Projects</h2>
+  <h2 class="section-title">Projects</h2>
 
   <div class="project-grid">
 
@@ -76,39 +88,77 @@
 </section>
 
 
-<!-- MODAL 1 -->
+<!-- ACHIEVEMENTS -->
+<section class="achievements" id="achievements">
+  <h2 class="section-title">Achievements</h2>
+
+  <div class="ach-grid">
+
+    <div class="ach-card">
+      <h4>Infosys Springboard Internship</h4>
+      <p>Completed Full Stack Developer Internship (Angular)</p>
+    </div>
+
+    <div class="ach-card">
+      <h4>Diploma Completed</h4>
+      <p>Government Polytechnic, Khamgaon</p>
+    </div>
+
+    <div class="ach-card">
+      <h4>Full Stack Project</h4>
+      <p>Built real-time bidding platform – BidNow</p>
+    </div>
+
+  </div>
+</section>
+
+
+<!-- CONTACT -->
+<section class="contact" id="contact">
+  <h2 class="section-title">Contact Me</h2>
+
+  <div class="contact-box">
+    <p><b>Phone:</b> 9637113928</p>
+    <p><b>Email:</b> poojarinde@gmail.com</p>
+
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea placeholder="Your Message"></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
+</section>
+
+
+<!-- MODALS -->
+
 <div class="modal" id="modal1">
   <div class="modal-content">
     <span class="close">&times;</span>
     <h3>BidNow – Real Time Bidding System</h3>
     <p>
-      Real-time bidding platform with Admin, Auctioneer and Bidder dashboards.
+      BidNow is a real-time bidding web application with
+      Admin, Auctioneer and Bidder dashboards.
     </p>
     <p><b>Tech:</b> HTML, CSS, JavaScript, Node.js, Express.js, MongoDB</p>
   </div>
 </div>
 
-<!-- MODAL 2 -->
+
 <div class="modal" id="modal2">
   <div class="modal-content">
     <span class="close">&times;</span>
     <h3>Personal Portfolio Website</h3>
     <p>
-      Portfolio website to showcase skills, projects and contact details.
+      Responsive portfolio website to showcase projects, skills and contact
+      information.
     </p>
     <p><b>Tech:</b> HTML, CSS, JavaScript</p>
   </div>
 </div>
 
 
-<!-- CONTACT -->
-<section class="contact" id="contact">
-  <h2>Contact</h2>
-  <p>Phone: 9637113928</p>
-  <p>Email: poojarinde@gmail.com</p>
-</section>
-
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
-
